feat: select principal resolver at application startup
